# le-insight.langchain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  routes.py
app/core/: config.py  context.py  llm.py
app/modules/categories/: dependecies.py  models.py  routes.py  utils.py
app/modules/classifications/: dependecies.py  models.py  routes.py  utils.py
app/modules/enhancements/: models.py  routes.py
app/utils/constants/: labelling_templates.py
expirement/: index.ipynb
expirements/: index.ipynb
