[tool.poetry]
name = "le-insight-langchain"
version = "0.1.0"
description = ""
authors = ["lenghak <125646707+Lenghak@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
