[tool.poetry]
name = "le-insight-langchain"
version = "0.1.0"
description = ""
authors = ["lenghak <125646707+Lenghak@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"
openai = "^1.14.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.0"
langchain-core = "^0.2.0"
spacy = "^3.7.4"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
